# contrail-local-repo-builder

./: .gitignore  README.md  docker-compose.yml  makecerts.sh  run.sh
docker/apache/: Dockerfile  init_pip.sh  init_yum.sh
docker/apache/conf/: httpd.conf
docker/apache/conf/extra/: httpd-ssl.conf
docker/registry_init/: Dockerfile  entrypoint.sh
docker/registry_init/reg-tool/: Cargo.toml
docker/registry_init/reg-tool/src/: main.rs
example/: sample.txt
src/: main.rs
