[package]
name = "reg-tool"
version = "0.1.0"
authors = ["Eishun Kondoh <shun3382@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow    = "1.0"
structopt = "0.3"
bollard   = "0.10"
actix     = "0.11"
actix-rt  = "2"
tokio = { version = "1.2", features = ["time", "fs", "net", "rt", "rt-multi-thread", "io-util", "full"] }
tokio-util = { version = "0.6", features = ["codec"]  }
reqwest = { version = "0.10.9", features = ["cookies", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1.0"
futures-core = "0.3"
futures-util = "0.3"
