[package]
name = "reg-tool"
version = "0.1.0"
authors = ["Eishun Kondoh <shun3382@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow    = "1.0"
structopt = "0.3"
bollard   = "0.10"
tokio = { version = "1.2", features = ["full"] }
futures-util = "0.3"
